# neural_net

./: .gitignore  CMakeLists.txt  README.md  __init__.py  activation_functions.cpp  activation_functions.hpp  batch_normalization.hpp  clip_and_check.hpp  exceptions.hpp  layer.cpp  layer.hpp  main.hpp  neural_network.cpp  neural_network.hpp  neural_network.py  neural_network_backward.cpp  neural_network_binding.cpp  neural_network_common.hpp  neural_network_core.cpp  neural_network_forward.cpp  neural_network_prediction.cpp  neural_network_training.cpp  neural_network_utils.cpp  optimization_algorithms.cpp  optimization_algorithms.hpp  performance.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_neural_network.py
include/: activation_functions.hpp  exceptions.hpp  layer.hpp  logger.hpp  neural_network.hpp  optimization_algorithms.hpp  regularization_types.hpp  weight_initialization.hpp
neural_network_py.so.dSYM/Contents/: Info.plist
neural_network_py.so.dSYM/Contents/Resources/Relocations/aarch64/: neural_network_py.so.yml
src/: activation_functions.cpp  layer.cpp  logger.cpp  neural_network.cpp  neural_network_binding.cpp  performance_tuning.cpp
tests/: conftest.py  test_activation.py  test_import.py  test_minimal.py  test_module.py  test_neural_network.py
