[build-system]
requires = ["scikit-build-core", "pybind11", "setuptools", "wheel"]
build-backend = "scikit_build_core.build"

[project]
name = "neural_network_py"
version = "0.0.2"
description = "A neural network library implemented in C++ with Python bindings"
requires-python = ">=3.6"
dependencies = [
    "numpy>=1.19.0",
]

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.source-dir = "."
cmake.build-type = "Release"
cmake.args = ["-DCMAKE_OSX_DEPLOYMENT_TARGET=10.15", "-DCMAKE_VERBOSE_MAKEFILE:BOOL=ON"]

[tool.scikit-build.cmake.define]
CMAKE_CXX_STANDARD = "17"
USE_OPENMP = "ON"

[tool.setuptools.package-data]
neural_network_py = ["*.so", "*.pyd"]

[tool.pytest.ini_options]
addopts = "-v --import-mode=importlib"
testpaths = ["tests"]

[tool.pyright]
include = ["neural_net", "tests"]
extraPaths = ["/opt/anaconda3/envs/py312/lib/python3.12/site-packages"]
typeCheckingMode = "basic"