[metadata]
name = neural_network_py
version = 0.0.1
author = Your Name
author_email = your.email@example.com
description = A neural network library implemented in C++ with Python bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/neural_network_py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    numpy>=1.19.0